--- a/package.json
+++ b/package.json
@@ -18,19 +18,31 @@
     "@patternfly/react-core": "^6.2.2",
     "@patternfly/react-icons": "^6.2.2",
     "@patternfly/react-table": "^6.2.2",
+    "@perses-dev/bar-chart-plugin": "^0.10.0",
     "@perses-dev/core": "^0.52.0",
     "@perses-dev/dashboards": "^0.52.0",
+    "@perses-dev/datasource-variable-plugin": "^0.4.0",
     "@perses-dev/explore": "^0.52.0",
+    "@perses-dev/flame-chart-plugin": "^0.4.0",
+    "@perses-dev/gauge-chart-plugin": "^0.10.0",
+    "@perses-dev/heatmap-chart-plugin": "^0.3.0",
+    "@perses-dev/histogram-chart-plugin": "^0.10.0",
+    "@perses-dev/loki-plugin": "^0.2.0",
     "@perses-dev/markdown-plugin": "^0.9.0",
     "@perses-dev/pie-chart-plugin": "^0.9.0",
     "@perses-dev/plugin-system": "^0.52.0",
     "@perses-dev/prometheus-plugin": "^0.53.3",
+    "@perses-dev/pyroscope-plugin": "^0.4.0",
     "@perses-dev/scatter-chart-plugin": "^0.8.0",
+    "@perses-dev/stat-chart-plugin": "^0.10.0",
     "@perses-dev/static-list-variable-plugin": "^0.5.1",
     "@perses-dev/status-history-chart-plugin": "^0.9.0",
     "@perses-dev/table-plugin": "^0.8.0",
+    "@perses-dev/tempo-plugin": "^0.54.0",
     "@perses-dev/timeseries-chart-plugin": "^0.10.1",
     "@perses-dev/timeseries-table-plugin": "^0.9.0",
+    "@perses-dev/trace-table-plugin": "^0.9.0",
+    "@perses-dev/tracing-gantt-chart-plugin": "^0.10.0",
     "@tanstack/react-query": "^4.0.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
